# Fraud-Detection-MLOPS

./: README.md  model_monitoring.py  pyproject.toml  requirements.txt  stats.json  streamlit_app.py
notebooks/: eda.ipynb
src/fraud_detection/: __init__.py  __main__.py  settings.py
src/fraud_detection/pipelines/DataPreprocessing/: __init__.py  nodes.py  pipeline.py
src/fraud_detection/pipelines/Evaluation/: __init__.py  nodes.py  pipeline.py
src/fraud_detection/pipelines/Scaling/: __init__.py  nodes.py  pipeline.py
src/fraud_detection/pipelines/TrainTestSplit/: __init__.py  nodes.py  pipeline.py
src/fraud_detection/pipelines/TrainingPipleine/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/DataCleaning/: test_pipeline.py
src/tests/pipelines/DataPreprocessing/: test_pipeline.py
src/tests/pipelines/Evaluation/: test_pipeline.py
src/tests/pipelines/Scaling/: test_pipeline.py
src/tests/pipelines/TrainTestSplit/: test_pipeline.py
src/tests/pipelines/TrainingPipleine/: test_pipeline.py
